resource_files = [
    'AR462.KEY',
    'AR470.KEY',
    'AZ.KEY',
    'BE.KEY',
    'BG.KEY',
    'BG103.KEY',
    'BG241.KEY',
    'BL.KEY',
    'BN.KEY',
    'BR.KEY',
    'BR274.KEY',
    'BX.KEY',
    'CE.KEY',
    'CE443.KEY',
    'CF.KEY',
    'CF445.KEY',
    'CO.KEY',
    'CZ.KEY',
    'CZ244.KEY',
    'CZ489.KEY',
    'DK.KEY',
    'DV.KEY',
    'ET.KEY',
    'FO.KEY',
    'FR.KEY',
    'FX.KEY',
    'GK.KEY',
    'GK220.KEY',
    'GK459.KEY',
    'GR.KEY',
    'GR453.KEY',
    'HU.KEY',
    'HU208.KEY',
    'HY.KEY',
    'IL.KEY',
    'IS.KEY',
    'IS161.KEY',
    'IT.KEY',
    'IT142.KEY',
    'IX.KEY',
    'JP.KEY',
    'KA.KEY',
    'KK.KEY',
    'KK476.KEY',
    'KX.KEY',
    'KY.KEY',
    'LA.KEY',
    'LH.KEY',
    'LT.KEY',
    'LT210.KEY',
    'LT211.KEY',
    'LT221.KEY',
    'LT456.KEY',
    'LV.KEY',
    'LV455.KEY',
    'MK.KEY',
    'MN.KEY',
    'MT.KEY',
    'MT103.KEY',
    'NE.KEY',
    'NG.KEY',
    'NL.KEY',
    'NO.KEY',
    'PH.KEY',
    'PL.KEY',
    'PL214.KEY',
    'PO.KEY',
    'PX.KEY',
    'RH.KEY',
    'RO.KEY',
    'RO446.KEY',
    'RU.KEY',
    'RU443.KEY',
    'RX.KEY',
    'RX443.KEY',
    'SF.KEY',
    'SG.KEY',
    'SK.KEY',
    'SP.KEY',
    'SQ.KEY',
    'SQ448.KEY',
    'SU.KEY',
    'SX.KEY',
    'TJ.KEY',
    'TM.KEY',
    'TR.KEY',
    'TR440.KEY',
    'TT.KEY',
    'TT443.KEY',
    'UK.KEY',
    'UK168.KEY',
    'UR.KEY',
    'UR1996.KEY',
    'UR2001.KEY',
    'UR2007.KEY',
    'UR465.KEY',
    'US.KEY',
    'UX.KEY',
    'UZ.KEY',
    'VI.KEY',
    'YC.KEY',
    'YC450.KEY'
    'YU.KEY',
]
